test/fail/invalid_return.min
program
start
    return "123"
end 
